--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <div class="wrapper">
       @@include('html/header.html')
 
-      <main></main>
+      <main>@@include('html/hero.html')</main>
 
       @@include('html/footer.html')
     </div>
