future section, some fixes

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,9 @@
     <div class="wrapper">
       @@include('html/header.html')
 
-      <main>@@include('html/hero.html') @@include('html/offer.html')</main>
+      <main>
+        @@include('html/hero.html') @@include('html/offer.html') @@include('html/future.html')
+      </main>
 
       @@include('html/footer.html')
     </div>
