--- a/src/html/future.html
+++ b/src/html/future.html
@@ -3,7 +3,7 @@
     <div class="future__content">
       <div class="future__block title-block title-block_left">
         <h2 class="title-block__title">Find Your Course That Makes Bright Future</h2>
-        <div class="title-block__text">
+        <div class="title-block__text primary-text">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultricies at diam magnis
             faucibus et faucibus gravida. malesuada fauci bus iaculis eu. Fusce est, consectetur
