--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -2,7 +2,7 @@
   <div class="hero__container">
     <div class="hero__content">
       <h1 class="hero__title">Self-Paced Learning Courses Online</h1>
-      <div class="hero__text">
+      <div class="hero__text primary-text primary-text_white">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Amet, vestibulum euismod nullam
           elementum. Urna, posuere nisi sit gravida massa. Ultrices bibendum sagittis pellentesque
