--- a/src/html/work.html
+++ b/src/html/work.html
@@ -2,7 +2,7 @@
   <div class="work__container">
     <div class="work__block title-block">
       <h2 class="title-block__title">How It Work</h2>
-      <div class="title-block__text">
+      <div class="title-block__text primary-text">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam et hendrerit euismod
           fusce sit.
@@ -17,8 +17,8 @@
             <use xlink:href="@img/sprite.svg#work-01"></use>
           </svg>
         </div>
-        <h3 class="item-work__title">Learn More Online</h3>
-        <div class="item-work__text">
+        <h3 class="item-work__title small-title">Learn More Online</h3>
+        <div class="item-work__text secondary-text">
           <p>
             Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod
             fusce sit.
@@ -31,8 +31,8 @@
             <use xlink:href="@img/sprite.svg#work-02"></use>
           </svg>
         </div>
-        <h3 class="item-work__title">Writing Notes</h3>
-        <div class="item-work__text">
+        <h3 class="item-work__title small-title">Writing Notes</h3>
+        <div class="item-work__text secondary-text">
           <p>
             Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod
             fusce sit.
@@ -45,8 +45,8 @@
             <use xlink:href="@img/sprite.svg#work-03"></use>
           </svg>
         </div>
-        <h3 class="item-work__title">Interactive Sessions</h3>
-        <div class="item-work__text">
+        <h3 class="item-work__title small-title">Interactive Sessions</h3>
+        <div class="item-work__text secondary-text">
           <p>
             Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod
             fusce sit.
@@ -59,8 +59,8 @@
             <use xlink:href="@img/sprite.svg#work-04"></use>
           </svg>
         </div>
-        <h3 class="item-work__title">Life Time Support</h3>
-        <div class="item-work__text">
+        <h3 class="item-work__title small-title">Life Time Support</h3>
+        <div class="item-work__text secondary-text">
           <p>
             Lorem ipsum dolor sit amet, consecte tur adipiscing elit. Aliquam et hendrer it eui smod
             fusce sit.
