--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
       <main>
         @@include('html/hero.html') @@include('html/offer.html') @@include('html/future.html')
-        @@include('html/work.html')
+        @@include('html/work.html') @@include('html/courses.html')
       </main>
 
       @@include('html/footer.html')
