added btn into courses section

--- a/src/html/courses.html
+++ b/src/html/courses.html
@@ -286,5 +286,9 @@
         </div>
       </article>
     </div>
+
+    <div class="courses__footer">
+      <a href="#" class="courses__btn primary-btn">View All Course</a>
+    </div>
   </div>
 </section>
