--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
       <main>
         @@include('html/hero.html') @@include('html/offer.html') @@include('html/future.html')
         @@include('html/work.html') @@include('html/courses.html') @@include('html/mentor.html')
+        @@include('html/event.html')
       </main>
 
       @@include('html/footer.html')
