--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         @@include('html/hero.html') @@include('html/offer.html') @@include('html/future.html')
         @@include('html/work.html') @@include('html/courses.html') @@include('html/mentor.html')
         @@include('html/event.html') @@include('html/result.html') @@include('html/blog.html')
+        @@include('html/reviews.html')
       </main>
 
       @@include('html/footer.html')
