--- a/src/html/future.html
+++ b/src/html/future.html
@@ -22,20 +22,15 @@
     </div>
     <div class="future__video video-future">
       <div class="video-future__box">
-        <img src="@img/future/future-image.png" alt="women" class="video-future__img" />
         <iframe
           src="https://www.youtube-nocookie.com/embed/PAdBwqza7cE"
           title="Business"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
+          loading="lazy"
           class="video-future__video"
         ></iframe>
-        <button type="button" class="video-future__play-btn">
-          <svg>
-            <use xlink:href="@img/sprite.svg#triangle"></use>
-          </svg>
-        </button>
       </div>
     </div>
   </div>
