--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,1 +1,106 @@
-<footer class="footer"></footer>
+<footer class="footer">
+  <div class="footer__container">
+    <div class="footer__education education-footer">
+      <div class="education-footer__top">
+        <a href="" class="education-footer__logo footer-title">Education</a>
+
+        <div class="education-footer__text primary-text">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipis cing elit. Amet, vestibulum euismod
+            nullam the elementum. Urna, posuere nisi sit gravid.
+          </p>
+        </div>
+      </div>
+      <div class="education-footer__bottom">
+        <h4 class="education-footer__title footer-title">Follow Us</h4>
+
+        <div class="education-footer__socials">
+          <a href="https://www.facebook.com/" class="education-footer__social" target="_blank">
+            <svg>
+              <use xlink:href="@img/sprite.svg#facebook"></use>
+            </svg>
+          </a>
+          <a href="https://twitter.com/" class="education-footer__social" target="_blank">
+            <svg>
+              <use xlink:href="@img/sprite.svg#twitter"></use>
+            </svg>
+          </a>
+          <a href="https://www.instagram.com/" class="education-footer__social" target="_blank">
+            <svg>
+              <use xlink:href="@img/sprite.svg#instagram"></use>
+            </svg>
+          </a>
+          <a href="https://www.linkedin.com/" class="education-footer__social" target="_blank">
+            <svg>
+              <use xlink:href="@img/sprite.svg#linkedin"></use>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="footer__col">
+      <h4 class="footer__title footer-title">Feature Links</h4>
+      <ul class="footer__list">
+        <li>
+          <a href="#" class="footer__link footer-link">About Us</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Graduation</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Scholarship</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Admissions</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">International</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Events</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__col">
+      <h4 class="footer__title footer-title">Support</h4>
+      <ul class="footer__list">
+        <li>
+          <a href="#" class="footer__link footer-link">Language</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">WordPress</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Privacy</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">FAQs</a>
+        </li>
+        <li>
+          <a href="#" class="footer__link footer-link">Support</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer__contact contact-footer">
+      <h4 class="contact-footer__title footer-title">Contact Us</h4>
+
+      <div class="contact-footer__text primary-text">
+        <p>230,Mirpur Area, Mirpur 10, Dhaka, Bangladesh</p>
+      </div>
+
+      <ul class="contact-footer__list">
+        <li>
+          <a href="tel:01748457269" class="contact-footer__link footer-link">+017 4845 7269</a>
+        </li>
+        <li>
+          <a href="mailto:info@gmail.com" class="contact-footer__link footer-link"
+            >info@gmail.com</a
+          >
+        </li>
+        <li>
+          <a href="#" class="contact-footer__link footer-link">www.yourdomain.com</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</footer>
