added anchors, logo reloading page

--- a/src/html/blog.html
+++ b/src/html/blog.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<section class="blog" id="blog">
   <div class="blog__container">
     <div class="blog__block title-block">
       <h2 class="title-block__title">Our Latest Blog</h2>
