--- a/src/html/courses.html
+++ b/src/html/courses.html
@@ -1,4 +1,4 @@
-<section class="courses">
+<section class="courses" id="courses">
   <div class="courses__container">
     <div class="courses__block title-block">
       <h2 class="title-block__title">Our All The Online Courses</h2>
