--- a/src/html/event.html
+++ b/src/html/event.html
@@ -1,4 +1,4 @@
-<section class="event">
+<section class="event" id="event">
   <div class="event__container">
     <div class="event__block title-block">
       <h2 class="title-block__title">Upcoming Event</h2>
