--- a/src/html/future.html
+++ b/src/html/future.html
@@ -1,4 +1,4 @@
-<section class="future">
+<section class="future" id="future">
   <div class="future__container">
     <div class="future__content">
       <div class="future__block title-block title-block_left">
