--- a/src/html/mentor.html
+++ b/src/html/mentor.html
@@ -1,4 +1,4 @@
-<section class="mentor">
+<section class="mentor" id="mentor">
   <div class="mentor__container">
     <div class="mentor__block title-block">
       <h2 class="title-block__title">Meet with Our Mentor</h2>
