--- a/src/html/offer.html
+++ b/src/html/offer.html
@@ -1,4 +1,4 @@
-<div class="offer">
+<div class="offer" id="offer">
   <div class="offer__container">
     <div class="offer__col">
       <div class="offer__item item-offer">
