--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <div class="reviews__container">
     <div class="reviews__block title-block">
       <h2 class="title-block__title">What Our Students Say</h2>
