--- a/src/html/students.html
+++ b/src/html/students.html
@@ -1,4 +1,4 @@
-<section class="students">
+<section class="students" id="students">
   <div class="students__container">
     <div class="students__body">
       <div class="students__block title-block title-block_white">
