--- a/src/html/work.html
+++ b/src/html/work.html
@@ -1,4 +1,4 @@
-<section class="work">
+<section class="work" id="work">
   <div class="work__container">
     <div class="work__block title-block">
       <h2 class="title-block__title">How It Work</h2>
