--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer" id="footer">
   <div class="footer__container">
     <div class="footer__education education-footer">
       <div class="education-footer__top">
