--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,6 +1,6 @@
-<header class="header">
+<header class="header fixed">
   <div class="header__container">
-    <a href="" class="header__logo primary-logo">Education</a>
+    <a href="#" class="header__logo primary-logo logo">Education</a>
 
     <div class="header__menu menu">
       <button type="button" class="menu__burger burger">
@@ -9,7 +9,7 @@
       <nav class="menu__nav navbar">
         <ul class="navbar__list">
           <li class="dropdown navbar__item">
-            <a href="#" class="dropdown__link navbar__link">Home</a>
+            <a href="#" data-scroll="hero" class="dropdown__link navbar__link">Home</a>
             <button type="button" class="dropdown__arrow dropdown-arrow">
               <svg class="dropdown-arrow__icon">
                 <use xlink:href="@img/sprite.svg#arrow"></use>
@@ -17,21 +17,22 @@
             </button>
             <ul class="dropdown__list list-dropdown">
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Home</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="offer">Results</a>
               </li>
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Home</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="future"
+                  >Find you course</a
+                >
               </li>
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Home</a>
-              </li>
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Home</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="work"
+                  >How it work</a
+                >
               </li>
             </ul>
           </li>
           <li class="dropdown navbar__item">
-            <a href="#" class="dropdown__link navbar__link">Courses</a>
+            <a href="#" class="dropdown__link navbar__link" data-scroll="courses">Courses</a>
             <button type="button" class="dropdown__arrow dropdown-arrow">
               <svg class="dropdown-arrow__icon">
                 <use xlink:href="@img/sprite.svg#arrow"></use>
@@ -39,15 +40,24 @@
             </button>
             <ul class="dropdown__list list-dropdown">
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Courses</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="mentor"
+                  >Our mentors</a
+                >
               </li>
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Courses</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="event"
+                  >Upcoming event</a
+                >
+              </li>
+              <li class="list-dropdown__item">
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="result"
+                  >Statistic</a
+                >
               </li>
             </ul>
           </li>
           <li class="dropdown navbar__item">
-            <a href="#" class="dropdown__link navbar__link">Page</a>
+            <a href="#" class="dropdown__link navbar__link" data-scroll="blog">Blog</a>
             <button type="button" class="dropdown__arrow dropdown-arrow">
               <svg class="dropdown-arrow__icon">
                 <use xlink:href="@img/sprite.svg#arrow"></use>
@@ -55,40 +65,19 @@
             </button>
             <ul class="dropdown__list list-dropdown">
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Page</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="reviews"
+                  >Reviews</a
+                >
               </li>
               <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Page</a>
-              </li>
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Page</a>
-              </li>
-            </ul>
-          </li>
-          <li class="dropdown navbar__item">
-            <a href="#" class="dropdown__link navbar__link">Blog</a>
-            <button type="button" class="dropdown__arrow dropdown-arrow">
-              <svg class="dropdown-arrow__icon">
-                <use xlink:href="@img/sprite.svg#arrow"></use>
-              </svg>
-            </button>
-            <ul class="dropdown__list list-dropdown">
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Blog</a>
-              </li>
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Blog</a>
-              </li>
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Blog</a>
-              </li>
-              <li class="list-dropdown__item">
-                <a href="#" class="list-dropdown__link navbar__link">Blog</a>
+                <a href="#" class="list-dropdown__link navbar__link" data-scroll="students"
+                  >Write Email</a
+                >
               </li>
             </ul>
           </li>
           <li class="navbar__item">
-            <a href="#" class="navbar__link">Contact</a>
+            <a href="#" class="navbar__link" data-scroll="footer">Contact</a>
           </li>
         </ul>
 
