--- a/src/html/hero.html
+++ b/src/html/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
   <div class="hero__container">
     <div class="hero__content">
       <h1 class="hero__title">Self-Paced Learning Courses Online</h1>
