--- a/src/html/result.html
+++ b/src/html/result.html
@@ -1,4 +1,4 @@
-<div class="result">
+<div class="result" id="result">
   <div class="result__container">
     <div class="result__body">
       <div class="result__col">
