--- a/src/html/head.html
+++ b/src/html/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>@@title</title>
 
+  <link rel="icon" type="image/png" href="../img/favicon/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="../img/favicon/favicon.svg" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
