added scroll to hero section

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -2,7 +2,7 @@
   <div class="footer__container">
     <div class="footer__education education-footer">
       <div class="education-footer__top">
-        <a href="" class="education-footer__logo footer-title">Education</a>
+        <a href="#" class="education-footer__logo footer-title" data-scroll="hero">Education</a>
 
         <div class="education-footer__text primary-text">
           <p>
