--- a/src/html/header.html
+++ b/src/html/header.html
@@ -21,7 +21,7 @@
               </li>
               <li class="list-dropdown__item">
                 <a href="#" class="list-dropdown__link navbar__link" data-scroll="future"
-                  >Find you course</a
+                  >Find your course</a
                 >
               </li>
               <li class="list-dropdown__item">
