--- a/src/html/header.html
+++ b/src/html/header.html
@@ -82,8 +82,8 @@
         </ul>
 
         <div class="navbar__buttons">
-          <a href="#" class="navbar__sign-in navbar__link">Sing in</a>
-          <a href="#" class="navbar__sign-up primary-btn primary-btn_smaller">Sing up</a>
+          <a href="#" class="navbar__sign-in navbar__link">Sign in</a>
+          <a href="#" class="navbar__sign-up primary-btn primary-btn_smaller">Sign up</a>
         </div>
       </nav>
     </div>
